# projectable

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
benches/: listing_selection.rs
extras/: CONFIG.md
src/: config.rs  dir.rs  dir_experimental.rs  filetree.rs  ignore.rs  lib.rs  logger.rs  main.rs  marks.rs  queue.rs
src/app/: component.rs  filetree.rs  input_box.rs  mod.rs  pending_popup.rs  testing.rs
src/app/components/: event_logger.rs  file_cmd_popup.rs  filetree.rs  fuzzy_match.rs  input_box.rs  marks_popup.rs  mod.rs  pending_popup.rs  popup.rs  preview_file.rs  testing.rs
src/config_defaults/: _my_config.toml  unix.toml  windows.toml
src/event/: crossterm_event.rs  mod.rs  refresh.rs
src/external_event/: crossterm_event.rs  mod.rs  refresh.rs  run_cmd.rs
src/filelisting/: items.rs  listing.rs  mod.rs
src/ui/: mod.rs  scroll_paragraph.rs
