[package]
name = "projectable"
version = "0.1.0"
edition = "2021"

[dependencies]
ansi-to-tui = "2.0.2"
anyhow = "1.0.69"
crossbeam-channel = "0.5.7"
crossterm = "0.25"
dirs-next = "2.0.0"
easy-cast = "0.5.2"
easy_switch = "0.1.0"
git2 = "0.16.1"
human-panic = "1.1.3"
ignore = "0.4.20"
itertools = "0.10.5"
log = "0.4.17"
notify = "5.1.0"
notify-debouncer-mini = "0.2.1"
rust_search = "2.1.0"
scopeguard = "1.1.0"
serde = { version = "1.0.158", features = ["derive"] }
toml = "0.7.3"
tui = { version = "0.19.0", features = ["serde"] }
tui-logger = "0.8.3"
tui-textarea = "0.2.0"
tui-tree-widget = "0.11.0"

[dev-dependencies]
assert_fs = "1.0.10"
