[package]
name = "projectable"
version = "0.1.0"
edition = "2021"

[dependencies]
ansi-to-tui = "2.0.2"
anyhow = "1.0.69"
bitvec = "1.0.1"
collect-all = "0.1.0"
crossbeam-channel = "0.5.7"
crossterm = "0.25"
dirs-next = "2.0.0"
duct = "0.13.6"
easy-cast = "0.5.2"
easy_switch = "0.1.0"
fuzzy-matcher = "0.3.7"
git2 = "0.16.1"
globset = { version = "0.4.10", features = ["serde1"] }
human-panic = "1.1.3"
human-sort = "0.2.2"
ignore = "0.4.20"
itertools = "0.10.5"
log = { version = "0.4.17", features = ["serde"] }
notify = "5.1.0"
rust_search = "2.1.0"
scopeguard = "1.1.0"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.95"
serial_test = "2.0.0"
strum = { version = "0.24.1", features = ["derive"] }
toml = "0.7.3"
tui = { version = "0.19.0", features = ["serde"] }
tui-logger = "0.8.3"
tui-textarea = "0.2.0"

[dev-dependencies]
assert_fs = "1.0.10"
test-log = "0.2.11"
env_logger = "0.10.0"
