[package]
name = "projectable"
authors = ["Diego Frias <styx5242@gmail.com>"]
version = "1.3.0"
description = """
projectable is a highly configurable TUI file manager, built for projects.
You can handle all your project's file-based needs from a comfortable and smooth 
interface!
"""
documentation = "https://github.com/dzfrias/projectable"
homepage = "https://github.com/dzfrias/projectable"
repository = "https://github.com/dzfrias/projectable"
keywords = ["project", "tui", "terminal", "manager", "files"]
categories = ["command-line-utilities", "filesystem"]
license = "MIT"
edition = "2021"
rust-version = "1.70"

[[bench]]
name = "listing_selection"
harness = false

[[bin]]
name = "prj"
path = "src/main.rs"

[dependencies]
ansi-to-tui = "2.0.2"
anyhow = "1.0.69"
bitvec = "1.0.1"
clap = { version = "4.3.4", features = ["derive"] }
collect-all = "0.1.0"
crossbeam-channel = "0.5.7"
crossterm = "0.25"
dirs-next = "2.0.0"
duct = "0.13.6"
easy-cast = "0.5.2"
easy_switch = "0.1.0"
either = { version = "1.8.1", features = ["serde"] }
fuzzy-matcher = "0.3.7"
git2 = { version = "0.16.1", features = ["vendored-openssl"] }
globset = { version = "0.4.10", features = ["serde1"] }
human-panic = "1.1.3"
human-sort = "0.2.2"
ignore = "0.4.20"
itertools = "0.10.5"
log = { version = "0.4.17", features = ["serde"] }
nom = "7.1.3"
notify-debouncer-full = "0.2.0"
rust_search = "2.1.0"
scopeguard = "1.1.0"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.95"
smallvec = "1.10.0"
strum = { version = "0.24.1", features = ["derive"] }
toml = "0.7.3"
tui = { version = "0.19.0", features = ["serde"] }
tui-logger = "0.8.3"
tui-textarea = "0.2.0"

[dev-dependencies]
assert_fs = "1.0.10"
test-log = "0.2.11"
env_logger = "0.10.0"
serial_test = "2.0.0"
criterion = "0.3"
